# Digginggame

./: .coverage  .gitignore  Cargo.toml  IDEAS.md  IMPROVEMENTS.md  LICENSE  PatchNote.md  README.md  WIP.md  build_log.txt  build_log_2.txt  build_log_2_utf8.txt  build_log_3.txt  build_log_3_utf8.txt  build_log_utf8.txt  diggame.py  gen_translation.py  managers.py  output.txt  resources.json  run_tests.py  savegame.json  sprite_sheet.pyxres  ui.py  utils.py
.cargo/: config.toml
data/: blocks.json
data/blocks/: gas.json  liquid.json  solid.json  special.json
doc/: PatchNote.md
docs/: README.md
draft/: TGIP.md  wan.md
lang/: en_us.json  ja_jp.json
patch/: PatchNote.md
python/: components.py  constants.py  diggame.py  gen_translation.py  sprite_sheet.pyxres
python/lang/: en_us.json
src/: components.rs  constants.rs  error.rs  events.rs  lib.rs  main.rs  ui.rs  utils.rs
src/game/: event_handler.rs  mod.rs  persistence.rs  update_logic.rs
src/game/handlers/: gameplay.rs  inventory.rs  map.rs  menu.rs  mod.rs  shop.rs  warp.rs
src/game/update_logic/: gameplay.rs  interaction.rs  loading.rs  mod.rs
src/game/update_logic/interaction/: breaking.rs  functional.rs  mod.rs  placing.rs
src/managers/: block.rs  input.rs  item.rs  language.rs  mod.rs  notification.rs  particle.rs  persistence.rs  player.rs  world.rs
src/managers/world/: access.rs  generation.rs  liquids.rs  mod.rs  modifications.rs  update.rs  view.rs
src/render/: game_renderer.rs  mod.rs  sprites.rs  world_renderer.rs
src/render/ui/: common.rs  game_hud.rs  menu_screens.rs  mod.rs
src/render/ui/hud/: inventory.rs  main_hud.rs  mod.rs  shop.rs  warehouse.rs
src/render/ui/screens/: map.rs  mod.rs  new_game.rs  pause.rs  save_select.rs  title.rs  warp.rs
src/render/ui/screens/map/: markers.rs  mod.rs  overlay.rs  terrain.rs
src/ui/: mod.rs  notification.rs  select_block.rs
src/utils/: icon.rs  mod.rs
tests/: test_all.py
