[package]
name = "digginggame"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.3"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.0" # Added for Normal distribution
noise = "0.7.0"
image = "0.23" # Added for image loading from bytes

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"