[package]
name = "digginggame"
version = "0.3.1"
edition = "2024"
default-run = "digginggame"

[dependencies]
anyhow = { version = "1.0.100", optional = true }
crossterm = { version = "0.29.0", optional = true }
image = "0.25.9"
lazy_static = "1.5.0"
macroquad = "0.4.14"
noise = "0.9.0"
rand = "0.9.2"
rand_distr = "0.5.1"
ratatui = { version = "0.29.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tui-textarea = { version = "0.7.0", optional = true }
zstd = "0.13.3"

[features]
editor = ["dep:anyhow", "dep:crossterm", "dep:ratatui", "dep:tui-textarea"]

[[bin]]
name = "editor"
path = "src/bin/editor/main.rs"
required-features = ["editor"]