[package]
name = "digginggame"
version = "0.3.3"
edition = "2024"
default-run = "digginggame"
description = "A 2D digging and exploration game built with macroquad."
license = "MIT"
repository = "https://github.com/wancor1/Digginggame"
keywords = ["game", "digging", "macroquad", "rust"]
categories = ["games"]

[dependencies]
anyhow = { version = "1.0.100", optional = true }
crossterm = { version = "0.29.0", optional = true }
image = "0.25.9"
lazy_static = "1.5.0"
macroquad = "0.4.14"
miniquad = "0.4.8"
noise = "0.9.0"
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
ratatui = { version = "0.29.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tui-textarea = { version = "0.7.0", optional = true }
zstd = "0.13.3"

[lints.rust]
non_upper_case_globals = "allow"
dead_code = "allow"

[lints.clippy]
similar_names = "allow"
suboptimal_flops = "allow"
multiple_crate_versions = "allow"
missing_const_for_fn = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
unnecessary_map_or = "allow"
map_unwrap_or = "allow"
new_without_default = "allow"
items_after_statements = "allow"
branches_sharing_code = "allow"
while_float = "allow"
collapsible_if = "allow"

[features]
editor = ["dep:anyhow", "dep:crossterm", "dep:ratatui", "dep:tui-textarea"]

[[bin]]
name = "editor"
path = "src/bin/editor/main.rs"
required-features = ["editor"]
